--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Install Snyk CLI
-      uses: snyk/actions/cli@main
+      uses: snyk/actions/cli
 
     - name: Run Snyk Test
       env:
