--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -14,8 +14,10 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Install Snyk CLI
-      uses: snyk/actions/cli
-
+      uses: snyk/actions@master
+      with:
+        args: install
+        
     - name: Run Snyk Test
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
