--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -13,11 +13,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       
-    - name: Install Snyk CLI
-      uses: snyk/actions@master
+    - name: Install Ruby
+      uses: ruby/setup-ruby@v1
       with:
-        args: install
-        
+        ruby-version: 3.1.3
+
+    - name: Install Snyk CLI
+      uses: snyk/actions/ruby@master
+
     - name: Run Snyk Test
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
