--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -13,13 +13,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       
-    - name: Install Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 3.1.3
-
     - name: Install Snyk CLI
-      uses: snyk/actions/ruby@master
+      uses: snyk/actions/setup-cli@v1
 
     - name: Run Snyk Test
       env:
