--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -7,18 +7,10 @@ on:
 
 jobs:
   snyk-scan:
-    name: Snyk Test
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      
-    - name: Install Snyk using npm
-      run: npm install snyk
-      
-    - name: Run Snyk
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      run: |
-       npx snyk test --file=Gemfile.lock > r.txt
-       cat r.txt
+    - uses: actions/checkout@v3
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/ruby@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high
