--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -22,5 +22,6 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       run: |
+        snyk auth $SNYK_TOKEN
         snyk test --file=Gemfile.lock > r.json
         cat r.json
