--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -1,33 +1,33 @@
-name: Snyk Security Scan
+name: Snyk scan
 
 on:
-  push:
-    branches:
-      - test-branch
+  pull_request:
+    branches: [main, test-branch]
 
 jobs:
   snyk-scan:
-    name: Snyk Security Scan
+    name: Snyk scan
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      
-    - name: Install Ruby and Bundler
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: '3.0.3'
-
-    - name: Install dependencies
-      run: bundle install --jobs 4 --retry 3
-
-    - name: Run Snyk Security Scan
-      uses: snyk/actions/ruby@master
-      with:
-        args: test
-
-    - name: Snyk Test Results
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      run: |
-        echo "${{ steps.snyk-scan.outputs.result }}"
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.1.3
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle install
+      - name: Snyk test
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        run: |
+          gem update --system
+          gem install snyk
+          snyk auth $SNYK_TOKEN
+          snyk test --file=Gemfile.lock >> result.txt
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          filePath: result.txt
