--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -1,33 +1,32 @@
-name: Snyk scan
+name: Snyk Scan
 
 on:
   pull_request:
     branches: [main, test-branch]
+    
 
 jobs:
-  snyk-scan:
-    name: Snyk scan
+  snyk:
+    name: Snyk Security Check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Setup Ruby
+      - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.3
-      - name: Install dependencies
+          ruby-version: 3.0.0
+      - name: Install Dependencies
         run: |
           gem install bundler
           bundle install
       - name: Snyk test
+        uses: snyk/actions/ruby@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: |
-          gem update --system
-          gem install snyk
-          snyk auth $SNYK_TOKEN
-          snyk test --file=Gemfile.lock >> result.txt
-      - name: Comment PR
-        uses: thollander/actions-comment-pull-request@v2
         with:
-          filePath: result.txt
+          args: test --file=Gemfile.lock --severity-threshold=high
+      - name: Upload Snyk Results to Code Scanning
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: reports/snyk/snyk-report.sarif
