--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -22,7 +22,7 @@ jobs:
       #     bundle install
       - name: Install Snyk CLI
         run: |
-          apt-get install -y nodejs
+          sudo apt-get install -y npm
           npm install -g snyk
       - name: Snyk test
         env:
