--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -6,30 +6,20 @@ on:
     
 
 jobs:
-  snyk:
-    name: Snyk Security Check
+  security:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      # - name: Install Ruby
-      #   uses: ruby/setup-ruby@v1
-      #   with:
-      #     ruby-version: 3.0.0
-      # - name: Install Dependencies
-      #   run: |
-      #     gem install bundler
-      #     bundle install
-      - name: Install Snyk CLI
-        run: |
-          sudo apt-get install -y npm
-          npm install -g snyk
-      - name: Snyk test
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/ruby@master
+        continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: |
-          snyk auth $SNYK_TOKEN
-          snyk test -v --file=Gemfile.lock >> results.txt
-          cat results.txt
+        with:
+          args: --sarif-file-output=snyk.sarif
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
 
 
