--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -16,10 +16,10 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --sarif-file-output=snyk.sarif
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
+          args: --json-file-output=snyk.json
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v2
         with:
-          sarif_file: snyk.sarif
+          filePath: snyk.json
 
 
