--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -16,10 +16,10 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: >> snyk.txt
+          args: --sarif-file-output=snyk.sarif
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
-          filePath: snyk.txt
+          filePath: snyk.sarif
 
 
