--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -16,10 +16,17 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --sarif-file-output=snyk.sarif
+          args: --json-file-output=snyk.json
+
+      - name: Convert JSON to text
+        uses: stefanzweifel/json-to-txt-action@v1
+        with:
+          inputFile: 'snyk.json'
+          outputFile: 'output.txt'
+
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
-          filePath: snyk.sarif
+          filePath: output.txt
 
 
