--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -10,16 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/ruby@master
-        continue-on-error: true # To make sure that SARIF upload gets called
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --json-file-output=snyk.json
+      - name: Install Snyk CLI
+        run: curl -sSL https://download.snyk.io/cli/latest/snyk-linux -o /usr/local/bin/snyk && chmod +x /usr/local/bin/snyk
 
-      - name: Convert JSON to text
-        run: cat snyk.json | jq -r '.' > output.txt
+      - name: Authenticate with Snyk
+        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+
+      - name: Run Snyk test
+        run: snyk test >> output.txt
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
