--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Install Snyk CLI
-        run: curl -sSL https://download.snyk.io/cli/latest/snyk-linux -o /usr/local/bin/snyk && chmod +x /usr/local/bin/snyk
+        run: curl -sSL https://static.snyk.io/cli/latest/snyk-linux​ -o /usr/local/bin/snyk && chmod +x /usr/local/bin/snyk
 
       - name: Authenticate with Snyk
         run: snyk auth ${{ secrets.SNYK_TOKEN }}
