--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Install Snyk CLI
-        run: npm install snyk
+        run: npm install -g snyk
 
       - name: Authenticate with Snyk
         run: snyk auth ${{ secrets.SNYK_TOKEN }}
