--- a/.github/workflows/snyktest.yml
+++ b/.github/workflows/snyktest.yml
@@ -17,10 +17,12 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --json-file-output=snyk.json
-      
+      - name: Parse Json
+        run: jq -r '.vulnerabilities[] | {id, moduleName, title, fixedIn, severity, cvssScore, from, thirdUrl: .references[0].url}' snyk.json > output.txt
+        
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
-          filePath: snyk.json
+          filePath: output.txt
 
 
